--- a/views/author_view/author_detail.pug
+++ b/views/author_view/author_detail.pug
@@ -1,9 +1,9 @@
-extends ./layout/layout
+extends ../layout/layout
 
 block content
 
   h1 Author: #{author.name}
-  p #{author.date_of_birth} - #{author.date_of_death}
+  p #{author.date_of_birth_show} - #{author.date_of_death_show}
 
   div(style='margin-left:20px;margin-top:20px')
 
@@ -20,3 +20,5 @@ block content
     hr
     p
       a(href=author.url+'/delete') Delete author
+    p
+      a(href=author.url+'/update') Update author
