--- a/views/author_view/author_list.pug
+++ b/views/author_view/author_list.pug
@@ -1,4 +1,4 @@
-extends ./layout/layout
+extends ../layout/layout
 
 block content
   h1= title
@@ -7,7 +7,7 @@ block content
     each author in author_list
       li
         a(href=author.url) #{author.name}
-        |  (#{author.date_of_birth} - #{author.date_of_death})
+        |  ( #{author.date_of_birth_show} - #{author.date_of_death_show} )
 
     else
       li There are no authors.
