--- a/views/book_view/book_detail.pug
+++ b/views/book_view/book_detail.pug
@@ -1,4 +1,4 @@
-extends ./layout/layout
+extends ../layout/layout
 
 block content
   h1 Title: #{book.title}
@@ -32,3 +32,9 @@ block content
 
     else
       p There are no copies of this book in the library.
+
+  hr
+  p
+    a(href=book.url+'/delete') Delete Book
+  p
+    a(href=book.url+'/update') Update Book
