--- a/views/bookinstance_view/bookinstance_detail.pug
+++ b/views/bookinstance_view/bookinstance_detail.pug
@@ -1,4 +1,4 @@
-extends ./layout/layout
+extends ../layout/layout
 
 block content
 
@@ -18,3 +18,9 @@ block content
 
   if bookinstance.status!='Available'
     p #[strong Due back:] #{bookinstance.due_back}
+  
+  hr
+  p
+    a(href=bookinstance.url+'/delete') Delete bookinstance
+  p
+    a(href=bookinstance.url+'/update') Update bookinstance
