--- a/views/bookinstance_view/bookinstance_list.pug
+++ b/views/bookinstance_view/bookinstance_list.pug
@@ -1,4 +1,4 @@
-extends ./layout/layout
+extends ../layout/layout
 
 block content
   h1= title
@@ -14,7 +14,7 @@ block content
         else
           span.text-warning #{val.status}
         if val.status!='Available'
-          span  (Due: #{val.due_back} )
+          span  (Due: #{val.due_back_formatted} )
 
     else
       li There are no book copies in this library.
